tests/data/midterm/midterm/2018007/Q7/submission_1/.vocStudentGradingReport.txt

[Executed at: Sun Mar 18 23:43:51 PDT 2018]

Traceback (most recent call last):
  File "/home/ccc_v1_c79523__48809/asn24778_45/asn24783_5/asnlib/autograde.py", line 14, in <module>
    score=runtest.main()
  File "/home/ccc_v1_c79523__48809/asn24778_45/asn24783_5/asnlib/runtestcases.py", line 65, in main
    stu_work=getattr(__import__(work_package, fromlist=[fun_name]), fun_name)
  File "./q7_work.py", line 12
    if n%a== 0 or n%b==0 or n%c == 0 or n%d == 0 or n%e == 0or n%f == 0or n%g == 0or n%h == 0
                                                            ^
SyntaxError: invalid token
Command exited with non-zero status 1
